# sciforge

./: .gitignore  CMakeLists.txt  MIGRATION.md  Makefile  README.md
.github/actions/setup-ecosystem-checkout/: action.yml
.github/workflows/: build-cpp.yml  build-wheels.yml  ci-selftest.yml  ci.yml  lint-cpp.yml  python-cpp.yml  release.yml
examples/binding_consumer/: pyproject.toml  setup.py
examples/binding_consumer/bindingdemo/: __init__.py  _demo.cpp
examples/binding_consumer/python/tests/: test_demo.py
examples/dummy_consumer/: CMakeLists.txt  main.cpp
examples/lint_consumer/: CMakeLists.txt  Makefile
examples/lint_consumer/cmake/: lintdemoConfig.cmake.in
examples/lint_consumer/cmake/smoke/: CMakeLists.txt
examples/lint_consumer/include/lintdemo/: lintdemo.hpp
examples/lint_consumer/tests/: test_lintdemo.cpp
examples/py_consumer/: pyproject.toml  setup.py
examples/py_consumer/pydemo/: __init__.py  _demo.c
examples/py_consumer/python/tests/: test_demo.py
include/sciforge/: bench.hpp
include/sciforge/binding/: class.hpp  convert.hpp  dispatch.hpp  error.hpp  gil.hpp  module.hpp
include/sciforge/test/: framework.hpp
lint/: clang-tidy-misra
lint/test/: probe.cpp  run.sh
python/sciforge/: __init__.py
python/sciforge-build/: README.md  pyproject.toml  setup.py
python/sciforge-build/sciforge_build/: __init__.py
python/sciforge/bench/: __init__.py  compare.py  runner.py  schema.py  stats.py
python/sciforge/bench/tests/: test_compare.py  test_runner.py  test_schema.py  test_stats.py
tests/: bench_emit.cpp  bench_roundtrip.py  test_meta.cpp  test_smoke.cpp
