# Minimal abi3 Python-binding fixture for SciForge's reusable python-cpp self-test:
# a single Py_LIMITED_API extension function plus a stdlib-unittest suite, enough to
# exercise build (pip install -e .) + test across the {os, python} matrix. The
# [tool.cibuildwheel] block is inert here (B3a builds/tests only) but readies the
# fixture for the build-wheels self-test (B3b). Leaf: no dependencies.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pydemo"
version = "0.0.1"
description = "Minimal abi3 binding fixture for SciForge's python-cpp self-test"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["pydemo"]

# Build one abi3 wheel per platform (cp310 -> works on CPython 3.10+).
[tool.cibuildwheel]
build-frontend = "build"
build = "cp310-*"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
