# Minimal abi3 Python-binding fixture for SciForge's reusable python-cpp / build-wheels
# self-tests: a single Py_LIMITED_API extension function plus a stdlib-unittest suite.
# Deliberately a PyPI-CLEAN LEAF (no build dependencies) so those reusables are
# exercised exactly as a real published leaf consumer would be. The N1 binding
# substrate is exercised separately by examples/binding_consumer.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydemo"
version = "0.0.1"
description = "Minimal abi3 binding fixture for SciForge's python-cpp / build-wheels self-tests"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["pydemo"]

# Build one abi3 wheel per platform (cp310 -> works on CPython 3.10+).
[tool.cibuildwheel]
build-frontend = "build"
build = "cp310-*"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
